grid overlap fixed

--- a/src/overlays/Photos/photos.css
+++ b/src/overlays/Photos/photos.css
@@ -30,18 +30,16 @@
 }
 
 .photo-grid {
-  /* background-color: white;
-  position: absolute;
-  inset: 0; */
   z-index: 0;
   overflow: auto;
   flex: 1;
-  height: 100%;
+  /* height: 100%; */
   min-height: 0;
   scrollbar-width: none;
 
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  grid-auto-rows: max-content;
   gap: 12px;
 }
 
